chore: fix failing go tests

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "./package.json": "./package.json",
     "./*": "./*"
   },
+  "license": "Apache-2.0",
   "type": "module",
   "scripts": {
     "check": "tsc --noEmit",
